tests/ui/suggestions/multibyte-escapes.stderr
error: non-ASCII character in byte literal
  --> $DIR/multibyte-escapes.rs:4:7
   |
LL |     b'µ';
   |       ^
   |       |
   |       must be ASCII
   |       this multibyte character does not fit into a single byte

error: non-ASCII character in byte literal
  --> $DIR/multibyte-escapes.rs:9:7
   |
LL |     b'字';
   |       ^^
   |       |
   |       must be ASCII
   |       this multibyte character does not fit into a single byte

error: non-ASCII character in byte string literal
  --> $DIR/multibyte-escapes.rs:14:7
   |
LL |     b"字";
   |       ^^ must be ASCII
   |
help: if you meant to use the UTF-8 encoding of '字', use \xHH escapes
   |
LL -     b"字";
LL +     b"\xE5\xAD\x97";
   |

error: non-ASCII character in byte string literal
  --> $DIR/multibyte-escapes.rs:19:7
   |
LL |     b"µ";
   |       ^ must be ASCII
   |
help: if you meant to use the UTF-8 encoding of 'µ', use \xHH escapes
   |
LL -     b"µ";
LL +     b"\xC2\xB5";
   |

error: non-ASCII character in byte string literal
  --> $DIR/multibyte-escapes.rs:24:7
   |
LL |     b"ñ";
   |       ^ must be ASCII
   |
help: if you meant to use the UTF-8 encoding of 'ñ', use \xHH escapes
   |
LL -     b"ñ";
LL +     b"\xC3\xB1";
   |

error: aborting due to 5 previous errors

